<resources>
    <string name="app_name">Admin Organisation</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_ebook">Upload Ebook</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="delete_notice">Delete Notice</string>
</resources>